Iron Gallery of Braavos/iron-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-db
spec:
  selector:
    matchLabels:
      app: iron
  replicas: 1
  template:
    metadata:
      labels:
        app: iron
        db: mariadb
    spec:
      containers:
      - name: iron-db
        image: kodekloud/irondb:2.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db
      volumes:
        - name: db
          emptyDir: {}
