Iron Gallery of Braavos/iron-gallery-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-gallery
spec:
  selector:
    matchLabels:
      run: iron-gallery
  replicas: 1
  template:
    metadata:
      labels:
        run: iron-gallery
    spec:
      containers:
      - name: iron-gallery
        image: kodekloud/irongallery:2.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/data
          name: config
        - mountPath: /usr/share/nginx/html/uploads
          name: images
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "50m"
      volumes:
        - name: config
          emptyDir: {}
        - name: images
          emptyDir: {}
