Iron Gallery of Braavos/iron-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-db-service
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: iron
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
